--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -43,20 +43,23 @@ button {
 // Header
 .header {
     background-color: $header-bg;
-    &__list {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
+    &__nav {
         padding: 16px 26px;
-        &__item {
-            font-weight: 600;
-            font-size: $main-font-size;
-            line-height: 24px;
-            text-transform: uppercase;
-            margin-right: 32px;
-            &:last-child {
-                margin-right: 0px;
+        &__list {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            &-item {
+                font-weight: 600;
+                font-size: $main-font-size;
+                line-height: 24px;
+                text-transform: uppercase;
+                margin-right: 32px;
+                cursor: pointer;
+                &:last-child {
+                    margin-right: 0px;
+                }
             }
         }
     }
@@ -89,6 +92,7 @@ button {
             font-size: $main-font-size;
             font-weight: 700;
             line-height: 24px;
+            cursor: pointer;
         }
     }
 }
