--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -177,3 +177,54 @@ button {
         }
     }
 }
+
+// Footer
+.footer {
+    background-color: $hero-bg;
+    padding: 72px 0px;
+    &__heading {
+        font-size: $h1-font-size;
+        font-weight: 700;
+        line-height: 40px;
+        margin-bottom: 40px;
+    }
+    &__description {
+        margin-bottom: 32px;
+        &__heading {
+            color: $accent-clr;
+            font-size: $main-font-size;
+            font-weight: 700;
+            line-height: 24px;
+            margin-bottom: 12px;
+        }
+        &__subheading {
+            font-size: $main-font-size;
+            font-weight: 500;
+            line-height: 24px;
+        }   
+    }
+    &__nav {
+        &__list {
+            margin-bottom: 32px;
+            &-item {
+                font-size: $main-font-size;
+                font-weight: 500;
+                line-height: 24px;
+                margin-bottom: 12px;
+                &:last-child {
+                    margin-bottom: 0px;
+                }
+            }
+            &-item--heading {
+                color: $accent-clr;
+                font-size: 18px;
+                font-weight: 700;
+                line-height: 24px;
+                margin-bottom: 12px;
+            }
+            &:last-child {
+                margin-bottom: 0px;
+            }
+        }
+    }
+}
