--- a/assets/style.css
+++ b/assets/style.css
@@ -26,7 +26,7 @@ button {
 
 .wrapper {
   width: 100%;
-  max-width: 312px;
+  max-width: 90%;
   margin: 0 auto;
 }
 
@@ -128,6 +128,7 @@ button {
   color: #2E323F;
 }
 .article__image {
+  width: 100%;
   margin: 40px 0px;
 }
 .article__steps {
@@ -202,4 +203,102 @@ button {
 }
 .footer__nav__list:last-child {
   margin-bottom: 0px;
+}
+
+@media screen and (min-width: 1024px) {
+  .wrapper {
+    max-width: 90%;
+  }
+  .header {
+    display: flex;
+    justify-content: flex-end;
+  }
+  .header__nav__list {
+    justify-content: flex-end;
+  }
+  .hero .hero__wrapper {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 128px 0px;
+  }
+  .hero__heading {
+    display: block;
+    max-width: 514px;
+    font-size: 64px;
+    line-height: 72px;
+  }
+  .hero__description {
+    padding: 40px 0px;
+    max-width: 334px;
+  }
+  .features__list {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    padding: 64px 0px;
+  }
+  .features__list-item {
+    margin-bottom: 0px;
+    padding: 0px 20px;
+  }
+  .features__list-item__heading {
+    margin-bottom: 32px;
+  }
+  .features__list-item__subheading {
+    max-width: 355px;
+  }
+  .article {
+    padding: 48px 0px;
+  }
+  .article__wrapper {
+    display: flex;
+    flex-direction: row;
+  }
+  .article__body {
+    margin-right: 64px;
+  }
+  .article__steps {
+    max-width: 312px;
+    margin-top: 0px;
+  }
+  .footer {
+    padding: 96px 0px;
+  }
+  .footer__body {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .footer__heading {
+    text-align: center;
+    margin-bottom: 64px;
+  }
+  .footer__description {
+    max-width: 373px;
+    margin-bottom: 0px;
+  }
+  .footer__nav {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .footer__nav__list {
+    margin-bottom: 0px;
+  }
+  .footer__nav__list-item {
+    margin-bottom: 12px;
+  }
+  .footer__nav__list-item:last-child {
+    margin-bottom: 0px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  .wrapper {
+    max-width: 1440px;
+  }
 }
