refactor: Fixed the links and text size in the footer

--- a/assets/style.css
+++ b/assets/style.css
@@ -273,6 +273,8 @@ button {
     align-items: center;
   }
   .footer__heading {
+    font-size: 48px;
+    line-height: 64px;
     text-align: center;
     margin-bottom: 64px;
   }
