--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -302,6 +302,8 @@ button {
             align-items: center;
         }
         &__heading {
+            font-size: 48px;
+            line-height: 64px;
             text-align: center;
             margin-bottom: 64px;
         }
